Add Users and Clients Kotlin JSON benchmarks and 1000 KB results (#2)
The benchmark now covers immutable Kotlin ports of java-json-benchmark's
Users and Clients schemas alongside MediaContent. The new suite uses
deterministic 1000 KB documents and compares Fory JSON Kotlin 1.7.1,
kotlinx.serialization, generated Moshi adapters, and Jackson Kotlin
across String and UTF-8 serialization/deserialization.

The port preserves UUID, BigDecimal, LocalDate, OffsetDateTime, String
arrays, and primitive long arrays. Setup checks equivalent JSON, exact
decimal values, array contents, and typed timestamps before timing. The
README explains the adapters and the differences between this Kotlin
corpus and the upstream Java generator, with source attribution and its
MIT license.

A new README section includes both payloads, four charts, throughput
tables, ratios, and reproduction commands. Raw JMH results, process
output, input hashes, and environment metadata are included under
`results/users-clients/`. Historical MediaContent reports are retained.

Validation:

- `./gradlew test jmhClasses`: 7 tests passed and JMH sources compiled.
- Full 32-case JMH run: 160 measurement samples, 9m 17s, Apple M5 /
OpenJDK 25.0.3; measured source
`8ac2606f96155ed0dfb5c1882d4c591f3a884285`.
- `python -m unittest test_plot_json_benchmark.py`: 5 tests passed,
including payload selection and rejection of duplicate/missing cases.
- Verified README values against unrounded scores, artifact/input
hashes, unchanged measured source, all four figures, Markdown lint, and
`git diff --check`.

In this run, Fory's throughput was 2.78×–9.75× that of the compared
libraries across the two payloads. Full JMH errors and individual
samples are retained for interpreting those measurements.